added about me need styling

--- a/Personal Site/src/index.css
+++ b/Personal Site/src/index.css
@@ -3,8 +3,8 @@
 
 @theme {
     --font-K2D: "K2D", sans-serif;
-    --color-darkBlue: #00055F;
-    --color-mediumBlue: #001E97;
+    --color-darkBlue: #000342;
+    --color-mediumBlue: #00166D;
     --color-darkOrange: #722800;
     --color-mediumdOrange: #FFA600;
 }
