added contact links hover effect & skills color change

--- a/Personal Site/src/index.css
+++ b/Personal Site/src/index.css
@@ -5,6 +5,6 @@
     --font-K2D: "K2D", sans-serif;
     --color-darkBlue: #000342;
     --color-mediumBlue: #00166D;
-    --color-darkOrange: #722800;
+    --color-darkOrange: #A03901;
     --color-mediumdOrange: #FFA600;
 }
