Fixed Emailto Link and added more data

--- a/Personal Site/src/index.css
+++ b/Personal Site/src/index.css
@@ -6,5 +6,5 @@
     --color-darkBlue: #000342;
     --color-mediumBlue: #00166D;
     --color-darkOrange: #A03901;
-    --color-mediumdOrange: #FFAE00;
+    --color-mediumOrange: #FFAE00;
 }
